<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="@color/transparent"
    app:allowDividerBelow="false">

    <!--
      万象书屋 D-18: 主题模式 UI 简化为 "跟随系统" 开关.
        开 -> themeMode = "0"  (跟随系统)
        关 -> themeMode = "1"  (强制亮色)
    -->
    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_cfg_theme"
        android:key="themeFollowSystem"
        android:summary="@string/theme_follow_system_summary"
        android:title="@string/theme_follow_system"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_brightness"
        android:key="eyeCareMode"
        android:summary="@string/eye_care_mode_summary"
        android:title="@string/eye_care_mode"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_bug_report"
        android:key="legal_feedback"
        android:summary="@string/about_feedback_summary"
        android:title="@string/about_feedback"
        app:iconSpaceReserved="false" />

</androidx.preference.PreferenceScreen>
